--- a/Desktop/guess/guess.html
+++ b/Desktop/guess/guess.html
@@ -29,7 +29,7 @@
 <div id='lower'>GUESS LOWER</div>
 <div id='diag'>DIALOGUE HERE!</div>
 <div id='history'>Game History<hr/></div>
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.0.js"></script>
+<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.0.js"></script>
 <script src="./guess.js"></script>
 </body>
 </html>
